fix xsmall too small <800px

--- a/src/styles/_2-typography.scss
+++ b/src/styles/_2-typography.scss
@@ -76,11 +76,6 @@ small {
     line-height: 14px;
   }
 
-  @media (max-width: 800px) {
-    font-size: 10px;
-    line-height: 12px;
-  }
-
   @media (min-width: 1900px) {
     font-size: 22px;
     line-height: 22px;
